backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: bootcamp
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
  - port: 3001
    targetPort: 3001
  type: ClusterIP
